This commit updated the CSS styling to fix an error where the contact form did not appear below but near the contact info on small screens.

--- a/css/styles.production.css
+++ b/css/styles.production.css
@@ -159,7 +159,7 @@ button:focus,
 padding: 20px;
 }
 
-.contact-info{
+/*.contact-info{
 width: 50%;
 float: left;
 padding: 20px;
@@ -168,12 +168,20 @@ max-width: 100%;
 
 }
 
-
-/*#contact-form{
+#contact-form{
 display:grid;
 grid-template-columns: max-content max-content;
 grid-gap:5px;
 }*/
+
+
+
+#contact-info-links{
+width: 50%;
+float: left;
+padding: 20px;
+max-width: 100%;
+}
 
 
 
@@ -399,6 +407,19 @@ input[type=button] :hover{
   h1 {
     font-size: 22px;
   }
+}
+
+
+@media only screen and (max-width:800px){    
+  #contact-info-links{
+
+    z-index: 1;
+  }
+  #contact-form{
+    z-index: 2;
+    display: inline-block;
+      
+  } 
 }
 
 
